--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
 
-    <activity android:name=".classwork1.ClassWork1Activity" android:screenOrientation="locked">
+    <activity android:name=".classwork1.HomeWork1Activity" android:screenOrientation="locked">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
