--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.erizo.testapp">
 
     <application
@@ -7,14 +8,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        tools:ignore="ExtraText">
         <activity android:name=".MainActivity" android:screenOrientation="locked">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".hw1.HomeWork1Activity" />
-        <activity android:name=".hw2.HomeWork2Activity" />
+        <activity android:name=".hw1.HomeWork1Activity"  android:parentActivityName=".MainActivity"/>
+        <!--noHistory не сохраняет Активити в историю-->
+        <activity android:name=".hw2.HomeWork2Activity"  android:parentActivityName=".MainActivity" />
+        <activity android:name=".cw1.ClassWork1Activity"/>
+        <activity android:name=".cw2.ClassWork2Activity"/>
     </application>
 </manifest>
+
