--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.erizo.testapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +20,9 @@
         <activity android:name=".hw1.HomeWork1Activity"  android:parentActivityName=".MainActivity"/>
         <!--noHistory не сохраняет Активити в историю-->
         <activity android:name=".hw2.HomeWork2Activity"  android:parentActivityName=".MainActivity" android:screenOrientation="locked"/>
-        <activity android:name=".cw1.ClassWork1Activity"/>
+        <activity android:name=".cw1.ClassWork1Activity" android:screenOrientation="locked"/>
+        <activity android:name=".cw3.ClassWork3Activity" android:screenOrientation="locked"/>
+        <activity android:name=".hw3.HomeWork3Activity" android:screenOrientation="locked"/>
     </application>
 </manifest>
 
