--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
+    compile 'com.google.code.gson:gson:2.8.2'
     testImplementation 'junit:junit:4.12'
+    compile 'com.android.support:design:27.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
