--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".hw4.ClockActivity" android:screenOrientation="locked"/>
         <activity android:name=".hw5.HomeWork5Activity" android:screenOrientation="locked"/>
         <activity android:name=".hw6.HomeWork6Activity" android:screenOrientation="locked"/>
+        <activity android:name=".hw7.HomeWork7Activity" android:screenOrientation="locked"/>
         <service android:enabled="true" android:name=".hw5.MyService" />
 
     </application>
