--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -25,7 +29,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     testImplementation 'junit:junit:4.12'
     compile 'com.android.support:design:27.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
