--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -19,25 +19,33 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
+    }
+    dataBinding {
+        enabled = true
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.android.support:design:27.0.2'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-    implementation 'com.github.bumptech.glide:glide:4.6.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    def dependency = rootProject.ext.dependencies
+    implementation dependency.supportAppcompat
+    implementation dependency.supportDesign
+    implementation dependency.supportV4
+    implementation dependency.recyclerview
+    implementation dependency.gson
+    implementation dependency.glide
+    implementation dependency.glideCompiler
+    implementation dependency.rxjava2Android
+    implementation dependency.rxjava2
+    /*это компилятор и его нужно подключпть подругому*/
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    annotationProcessor dependency.androidBindingCompiler
+    implementation dependency.archComponentsExtensions
+    annotationProcessor dependency.archComponents
+    implementation dependency.glide
+    annotationProcessor dependency.glideCompiler
+    api project(path: ':data')
+    compile project(path: ':domain')
 }
